--- a/minecraft/config/screenshot_viewer-client.toml
+++ b/minecraft/config/screenshot_viewer-client.toml
@@ -26,7 +26,7 @@ defaultListOrder = "ASCENDING"
 #Range: > 0
 pauseMenuButtonOffset = 4
 #The path to the folder containing the screenshots images that will be displayed in the screen.
-screenshotsFolder = "C:\\Users\\andre\\AppData\\Roaming\\PrismLauncher\\instances\\SMP_modpack\\minecraft\\screenshots"
+screenshotsFolder = "K:\\tema\\Roaming\\PrismLauncher\\instances\\SMP_modpack\\minecraft\\screenshots"
 #If enabled, clicking on the link printed in the chat when taking a screenshot will open it directly in the screenshot manager.
 redirectScreenshotChatLinks = false
 #The visibility state of the screenshots names.
