--- a/minecraft/mods/.index/yeetusexperimentus.pw.toml
+++ b/minecraft/mods/.index/yeetusexperimentus.pw.toml
@@ -1,16 +1,16 @@
-filename = 'experimentalsettingsdisabler-1.20.1-3.0.jar'
-name = 'Experimental Settings Disabler'
-side = 'client'
+filename = 'YeetusExperimentus-Forge-2.3.1-build.6+mc1.20.1.jar'
+name = 'Yeetus Experimentus'
+side = 'both'
 x-prismlauncher-loaders = [ 'forge' ]
 x-prismlauncher-mc-versions = [ '1.20.1' ]
 x-prismlauncher-release-type = 'release'
 
 [download]
-hash = 'f03a753b276bbb1f17bc7050566a1bf9dbb0a74a'
+hash = '6efdaf5d213f779e51aa84631a5f06a306351e75'
 hash-format = 'sha1'
 mode = 'metadata:curseforge'
 url = ''
 
 [update.curseforge]
-file-id = 4815025
-project-id = 926083
+file-id = 4680832
+project-id = 635427
