+ кварк + конфиг на кварк + petrols

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@ minecraft/*
 !minecraft/config
 minecraft/config/*
 !minecraft/config/holdmyitems-client.toml
+!minecraft/config/quark-common.toml
 
 !/minecraft/defaultconfigs/
 
