--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@ minecraft/config/*
 !minecraft/config/subtle_effects
 !minecraft/config/hole_filler_mod.toml
 !minecraft/config/createfisheryindustry-common.toml
+!minecraft/config/Weather2
 
 !minecraft/tacz
 minecraft/tacz/tacz_default_gun
