--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@ minecraft/config/*
 !minecraft/config/hole_filler_mod.toml
 !minecraft/config/createfisheryindustry-common.toml
 !minecraft/config/Weather2
+!minecraft/config/parcool-client.toml
 
 !minecraft/tacz
 minecraft/tacz/tacz_default_gun
