--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,7 @@ minecraft/config/*
 !minecraft/config/Weather2
 !minecraft/config/parcool-client.toml
 !minecraft/config/create-stuff-additions.toml
+!minecraft/config/carryon-common.toml
 
 !minecraft/tacz
 minecraft/tacz/tacz_default_gun
